update home gallery component

--- a/assets/scss/home/gallery/lg.scss
+++ b/assets/scss/home/gallery/lg.scss
@@ -14,6 +14,11 @@
   background-color: #ffffff;
   margin-top: -6px;
 }
+.gallery-section
+{
+  padding-left: 10px;
+  padding-right: 10px;
+}
 .button-link
 {
     text-decoration: none;
