--- a/assets/scss/founder/founder.scss
+++ b/assets/scss/founder/founder.scss
@@ -19,7 +19,12 @@
 {
   text-decoration: none;
   letter-spacing: 2px;
-  padding-top: 20px;
+  font-size: 16px;
+
+  &:hover
+  {
+    color: #fc5f43;
+  }
 }
 @media only screen and (max-width: 600px)
 {
