update home information component

--- a/assets/scss/home/information/lg.scss
+++ b/assets/scss/home/information/lg.scss
@@ -13,12 +13,14 @@
 {
     font-size: 40px;
     color: #212121;
+    text-align: center;
 }
 .text-subtitle
 {
     font-size: 20px;
     color: #212121;
     margin-top: 4px;
+    text-align: center;
 }
 .section-info
 {
