--- a/assets/scss/home/information/sm.scss
+++ b/assets/scss/home/information/sm.scss
@@ -2,10 +2,12 @@
 {
   .text-title
   {
+    font-size: 30px;
     text-align: center;
   }
   .text-subtitle
   {
+    font-size: 18px;
     text-align: center;
   }
   .section-info-title
