--- a/assets/scss/fonts.scss
+++ b/assets/scss/fonts.scss
@@ -1,26 +1,26 @@
-@font-face
-{
-  font-family: 'Releway';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Releway Light'), local('Releway-Light'),
-  url(~/fonts/Releway-Light.ttf) format('truetype');
-}
+// @font-face
+// {
+//   font-family: 'Releway';
+//   font-style: normal;
+//   font-weight: 300;
+//   src: local('Releway Light'), local('Releway-Light'),
+//   url(~/fonts/Releway-Light.ttf) format('truetype');
+// }
 
-@font-face
-{
-  font-family: 'Releway';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Releway Regular'), local('Releway-Regular'),
-  url(~/fonts/Releway-Regular.ttf) format('truetype');
-}
+// @font-face
+// {
+//   font-family: 'Releway';
+//   font-style: normal;
+//   font-weight: 400;
+//   src: local('Releway Regular'), local('Releway-Regular'),
+//   url(~/fonts/Releway-Regular.ttf) format('truetype');
+// }
 
-@font-face
-{
-  font-family: 'Releway';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Releway Bold'), local('Releway-Bold'),
-  url(~/fonts/Releway-Bold.ttf) format('truetype');
-}
+// @font-face
+// {
+//   font-family: 'Releway';
+//   font-style: normal;
+//   font-weight: 700;
+//   src: local('Releway Bold'), local('Releway-Bold'),
+//   url(~/fonts/Releway-Bold.ttf) format('truetype');
+// }
